--- a/frontend/src/style/constants.scss
+++ b/frontend/src/style/constants.scss
@@ -17,3 +17,7 @@ $font: 'Signika', sans-serif;
 
 // BACKGROUND
 $gradient-background: linear-gradient(to top right, cyan, blue , purple, magenta);
+
+// MAP/LIST SPACE REPARTITION
+$flex-left: 10;
+$flex-right: 5;
