--- a/frontend/src/components/shared/notification/notification.scss
+++ b/frontend/src/components/shared/notification/notification.scss
@@ -1,6 +1,6 @@
 .notification {
     padding: 10px 30px;
-    margin-bottom: 20px;
+    margin: 10px 0 20px 0;
 
     &.info {
         border: solid 1px blue;
