Fix design bug in 50x and 40x pages on very large screen

--- a/frontend/src/components/not_found/not_found.scss
+++ b/frontend/src/components/not_found/not_found.scss
@@ -27,8 +27,8 @@
             text-align: center;
 
             h1 {
-                text-align: left;
-                display: inline-block;
+                text-align: center;
+                display: block;
                 line-height: 2.2em;
                 margin-bottom: 20px;
 
