Correct gray background-color on the other startups block

--- a/frontend/src/style/constants.scss
+++ b/frontend/src/style/constants.scss
@@ -11,6 +11,7 @@ $gray: #B7B5C6;
 $violet: #351D4E;
 $gray-font: #333;
 $lightgray: #DBDBDB;
+$startups-gray: #EDEAEE;
 $contact-mode: #F0F0F0;
 
 // FONT
