--- a/frontend/src/components/shared/other_startups/other_startups.scss
+++ b/frontend/src/components/shared/other_startups/other_startups.scss
@@ -1,7 +1,7 @@
 @import '../../../style/mixins.scss';
 
 #other-startups {
-    background-color: $lightgray;
+    background-color: $startups-gray;
     padding: 20px 0 40px 0;
 
     h2 {
