--- a/frontend/src/style/constants.scss
+++ b/frontend/src/style/constants.scss
@@ -7,6 +7,7 @@ $min-width-desktop: 1200px;
 // COLORS
 $pink: #F60CB9;
 $blue: #066EE7;
+$blue-hover: #0562CE;
 $gray: #B7B5C6;
 $violet: #351D4E;
 $gray-font: #333;
