--- a/frontend/src/components/home/home.scss
+++ b/frontend/src/components/home/home.scss
@@ -24,18 +24,19 @@
 
         @media(max-width: $min-width-mobile) {
             text-align: left;
-            margin-top: 10vh;
+            margin-top: 25vh;
             margin-bottom: 30px;
             padding-left: 15px;
             font-size: 2.7em;
         }
 
         @media(max-width: $min-width-small-mobile) {
-            margin-top: 10vh;
+            margin-top: 20vh;
             margin-bottom: 50px;
             padding-left: 10px;
             font-size: 2.3em;
             letter-spacing: 0;
+
         }
     }
 
@@ -79,6 +80,9 @@
             right: 0;
             left: 0;
             background-color: transparent;
+            @media (max-width: $min-width-mobile) {
+                display: none;
+            }
 
             ul { text-align: right; }
 
@@ -92,7 +96,7 @@
                 &.fse-text { width: auto !important; }
                 img { max-width: 100%; }
             }
-            @media (max-width: 768px) {
+            @media (max-width: $min-width-mobile) {
                 li {
                     margin: 0 10px 0 0;
                     width: 50px;
@@ -102,7 +106,6 @@
             }
 
             a { display: inline-block; }
-
             p {
                 width: 200px;
                 margin-top: 5px;
@@ -112,7 +115,7 @@
                 text-align: left;
             }
 
-            @media (max-width: 768px) {
+            @media (max-width: $min-width-mobile) {
                 p {
                     width: 120px;
                     font-size: 9px;
@@ -128,13 +131,13 @@
         top: 100vh; left: 0; right: 0;
 
         > div { background-color: white; }
-        
+
         h2 {
             text-align: center;
             color: $violet;
             padding: 20px 10px;
         }
-        
+
         .how-it-works {
             padding: 20px;
             .images {
@@ -147,7 +150,6 @@
                     @media (max-width: 1000px) { padding: 10px; }
                     @media (max-width: $min-width-mobile) { padding: 10px; width: 100%; }
                 }
-                
             }
         }
 
@@ -162,7 +164,6 @@
                 p {
                     flex: 10;
                     padding: 0 20px 0 30px;
-                    color: $gray-font;
                     font-size: 0.85em;
                     a {
                         display: inline-block;
