--- a/frontend/src/style/global.scss
+++ b/frontend/src/style/global.scss
@@ -12,6 +12,7 @@ html, body, #root, #app {
     height: 100vh;
     width: 100%;
     margin: 0;
+    color: $gray-font;
 }
 .clearfix {
     &:after {
@@ -93,6 +94,19 @@ ul.three-columns { columns: 3; }
     -webkit-animation: heartbeat 0.75s;
 }
 
+// Badge
+.badge {
+    font-size: 14px;
+    border-radius: 50%;
+    background-color: $pink;
+    color: white;
+    padding: 4px;
+    width: 24px;
+    height: 24px;
+    text-align: center;
+    display: inline-block;
+    margin-right: 11px;
+}
 
 /* Forms */
     /* Button */
@@ -105,6 +119,11 @@ ul.three-columns { columns: 3; }
         font-size: 25px;
         text-decoration: none;
         border: none;
+
+        &:hover {
+            background-color: $blue-hover;
+            cursor: pointer;
+        }
 
         @media (max-width: $min-width-mobile) {
             padding: 8px 30px;
@@ -119,6 +138,9 @@ ul.three-columns { columns: 3; }
         &.white {
             background-color: white;
             color: $blue;
+            &:hover {
+                background-color: white;
+            }
         }
 
         &.small-white {
@@ -128,11 +150,9 @@ ul.three-columns { columns: 3; }
             border-radius: 30px;
             font-size: .95em;
             padding: 5px 10px;
-        }
-
-        &:hover {
-            text-decoration: underline;
-            cursor: pointer;
+            &:hover {
+                background-color: white;
+            }
         }
 
         &:disabled {
@@ -287,6 +307,141 @@ header#global-header {
         flex: $flex-left;
     }
 
+    #new-search {
+        background: white;
+        padding: 20px 40px 30px 40px;
+        @media (max-width: $min-width-mobile) { padding: 10px 20px 20px 20px; }
+
+        h2 {
+            color: $blue;
+            margin-bottom: 10px;
+            @media (max-width: $min-width-mobile) { font-size: 1.25em; }
+        }
+        input[type=text] { border: solid 1px lightgray; }
+
+        #job-form-step, #location-form-step {
+            margin-bottom: 20px;
+        }
+
+        .or {
+            text-align: center;
+            color: $gray;
+            margin-bottom: 15px;
+        }
+
+        .location-container {
+            text-align: center;
+            .loader {
+                display: inline-block;
+                margin-right: 16px;
+                vertical-align: top;
+                margin-top: 5px;
+            }
+            button {
+                border: solid 2px $blue;
+                width: 100%;
+                padding: 8px 30px;
+                margin-bottom: 10px;
+                .marker-cyan { margin-right: 16px; }
+                @media (max-width: $min-width-mobile) { padding: 8px 10px; }
+            }
+        }
+
+        .submit-container {
+            text-align: center;
+        }
+
+        .suggestions {
+            border: solid 1px lightgrey;
+            border-radius: 10px;
+            margin-top: 5px;
+            li {
+                padding: 6px;
+                text-align: center;
+                border-bottom: solid 1px lightgray;
+                &:hover { cursor: pointer; }
+                &:last-child { border-bottom: none; }
+            }
+        }
+
+        button:disabled {
+            cursor: not-allowed;
+            background-color: lightgray;
+        }
+    }
+
+    // FAVORITES
+    #favorites-list {
+        background: white;
+
+        h2 {
+            color: black;
+            padding: 5px 20px;
+            &.empty { padding: 30px 20px; }
+        }
+
+        .favorites {
+            max-height: 65vh;
+            overflow-y: auto;
+        }
+
+        .favorite-item {
+            padding: 5px 20px 15px 20px;
+
+            font-size: .9em;
+            position: relative;
+
+            h3 {
+                padding: 5px 30px 0 0;
+                color: $blue;
+                font-weight: normal;
+            }
+            h4 { color: black; margin: 5px 0 2px 0; }
+            .naf { padding: 5px 0; }
+            .contact {
+                margin-top: 10px;
+                li {
+                    margin-bottom: 5px;
+                    &:first-child { margin-top: 5px; }
+                }
+            }
+
+            .close-icon {
+                position: absolute;
+                right: 20px;
+                top: 15px;
+                background-size: 80%;
+            }
+
+            .contact .icon {
+                margin-right: 10px;
+            }
+            border-bottom: solid 1px $lightgray;
+            &:last-child { border-bottom: none; }
+        }
+
+        .export-favorites {
+            padding: 15px 20px;
+            text-align: center;
+            border-top: solid 1px $lightgray;
+            input {
+                border: solid 1px darkgray;
+                padding: 13px 20px 10px 20px;
+                margin-bottom: 15px;
+            }
+            button {
+                font-weight: normal;
+                font-size: 18px;
+                padding: 8px 20px;
+            }
+            input, button {
+                width: 90%;
+            }
+        }
+    }
+
+
+
     .title button {
         position: relative;
         background-position: center;
@@ -366,16 +521,25 @@ header#global-header {
 
 .content {
     padding: 0 20px;
+    // Avoid superposition with fixed footer
+    margin-bottom: 100px;
 
     h1 { color: $blue; font-size: 1.5em; margin: 20px 0; }
     h2 { color: black; margin-bottom: 10px; font-size: 1.2em; margin: 20px 0; }
-    h3, h4 { margin: 10px 0; }
+    h3, h4 { color: black; margin: 10px 0; }
     ul, ol { padding-left: 40px; }
+    p { word-wrap: break-word; }
 
     form {
         margin-bottom: 70px;
         > div { margin: 20px 0; }
-        select { background: white; padding: 5px 10px; margin-left: 10px; }
+        select {
+            background: white;
+            padding: 5px 10px;
+            max-width: 100%;
+        }
+        label.select-label { margin-right: 10px; }
+
         input[type=text], input[type=tel], input[type=email] { display: inline-block; border: solid 1px darkgray; padding: 10px 20px; margin: 3px 0; color: black; }
         .form-help-text { font-size: .8em; }
     }
@@ -383,49 +547,88 @@ header#global-header {
 
 footer#global-footer {
     &:not(.not-fixed) { position: fixed; }
+    padding: 10px;
     bottom: 0;
     right: 0;
     left: 0;
     min-height: 4vh;
+    color: white;
     background-color: black;
 
     z-index: 2;
     font-size: .95em;
+    display: flex;
 
-    ul {
-        width: 100%;
-        display: flex;
-    }
-    li {
-        flex: 1;
-        vertical-align: text-top;
-        text-align: center;
-        margin: 0;
-
-        padding-top: 10px;
-        &.has-img {
-            padding-top: 5px;
-        }
-
-        a {
-            text-decoration: none;
-            color: white;
-            &:hover { text-decoration: underline; }
-        }
-        img { height: 35px; }
+    a {
+        color: white;
+        text-decoration: none;
+        &:hover { text-decoration: underline; }
     }
 
-    @media (max-width: $min-width-mobile) {
+    .follow {
+        flex: 3;
+        @media (max-width: $min-width-mobile) { flex: 2; }
+        @media (max-width: $min-width-small-mobile) {
+            flex: 0;
+            span { display: none; }
+        }
+    }
+    .links {
+        flex: 4;
+
         ul {
-            font-size: .9em;
+            display: flex;
+            text-align: center;
+            width: 100%;
+            li {
+                flex: 3;
+                &.small { flex: 1; }
+                @media (max-width: 1000px) { margin-right: 8px }
+            }
+        }
+    }
+
+    .flags {
+        flex: 5;
+        @media (max-width: 1000px) { flex: 6; }
+        text-align: right;
+
+        ul {
+            text-align: right;
+            width: 100%;
 
             li {
-                margin: 0;
-                &.small {
-                    flex: inherit;
-                    width: 50px;
+                padding-top: 10px;
+                margin-right: 10px;
+                vertical-align: top;
+                width: 70px;
+                &:last-child { margin-right: 0; }
+
+                &.fse { width: 80px; }
+                &.fse-text {
+                    width: auto !important;
+                    padding-top: 0;
+                }
+                img { max-width: 100%; }
+
+                @media (max-width: 1000px) {
+                    &.pole-emploi { display: none; }
+                    margin-right: 8px;
                 }
             }
+
+            p {
+                width: 150px;
+                margin-top: 5px;
+                color: white;
+                font-size: 10px;
+                line-height: 14px;
+                text-align: left;
+            }
+        }
+
+        @media (max-width: $min-width-mobile) {
+            display: none;
         }
     }
 }
