--- a/frontend/src/style/mixins.scss
+++ b/frontend/src/style/mixins.scss
@@ -232,8 +232,9 @@
             margin: 0 0 20px 0;
         }
 
-        h3, h4 {
+        h3, h4, h5 {
             margin: 0;
+            color: black;
         }
 
         .favorite-button button {
