Fixed some font color

--- a/frontend/src/components/shared/other_startups/other_startups.scss
+++ b/frontend/src/components/shared/other_startups/other_startups.scss
@@ -20,6 +20,7 @@
             padding: 20px 15px;
             text-align: center;
             text-decoration: none;
+            color: $gray-font;
             &:hover { text-decoration: underline; }
 
             img {
