--- a/frontend/src/components/form/form.scss
+++ b/frontend/src/components/form/form.scss
@@ -14,6 +14,9 @@ $submit-width: 340px;
     #job-form-step, #location-form-step {
         margin: auto;
         max-width: 850px;
+
+        // Avoid superposition with fixed footer
+        margin-bottom: 135px;
     }
 
     #job-form-step, #location-form-step {
