No black background and 100% width on home page

--- a/frontend/src/style/constants.scss
+++ b/frontend/src/style/constants.scss
@@ -12,7 +12,7 @@ $gray: #B7B5C6;
 $violet: #351D4E;
 $gray-font: #333;
 $lightgray: #DBDBDB;
-$startups-gray: #EDEAEE;
+$startups-gray: #F8F8F8;
 $contact-mode: #F0F0F0;
 
 // FONT
