--- a/frontend/src/components/shared/other_startups/other_startups.scss
+++ b/frontend/src/components/shared/other_startups/other_startups.scss
@@ -16,7 +16,6 @@
 
         a {
             flex: 1;
-            flex-basis: 33%;
             padding: 20px 15px;
             text-align: center;
             text-decoration: none;
@@ -32,6 +31,9 @@
             &.avril img { width: 130px; }
         }
 
+        @media (max-width: 1100px) {
+            a { flex-basis: 33%; }
+        }
         @media (max-width: $min-width-mobile) {
             a { flex-basis: 50%; }
         }
