--- a/frontend/src/components/companies/companies.scss
+++ b/frontend/src/components/companies/companies.scss
@@ -192,8 +192,9 @@
         }
     }
 
-    h2 {
+    h1 {
         padding: 10px 20px;
+        font-size: 1.5em;
         color: black;
         @media (max-width: $min-width-mobile) {font-size: 1.2em; }
     }
