Add algorithm explanation on home page

--- a/frontend/src/components/home/home.scss
+++ b/frontend/src/components/home/home.scss
@@ -140,6 +140,12 @@
 
         .how-it-works {
             padding: 20px;
+
+            .text {
+                p { margin-bottom: 10px; }
+                margin-bottom: 15px;
+            }
+
             .images {
                 text-align: center;
                 img {
