Add siret on company details/modal

--- a/frontend/src/components/companies/companies.scss
+++ b/frontend/src/components/companies/companies.scss
@@ -443,6 +443,12 @@
         }
     }
 
+    small {
+        float: right;
+        font-size: .8em;
+        color: gray;
+    }
+
     hr {
         position: relative;
         left: -45px;
