--- a/frontend/src/components/company_details/company_details.scss
+++ b/frontend/src/components/company_details/company_details.scss
@@ -26,11 +26,23 @@
         margin: 30px 0;
     }
 
+    .modal-title strong {
+        color: $blue;
+        font-size: 1.5em;
+        margin: 0;
+    }
+
     h4 { margin: 15px 0; }
     h5 { margin: 5px 0; }
 
     .contact .icon {
         margin-right: 5px;
+    }
+
+    small {
+        float: right;
+        font-size: .8em;
+        color: gray;
     }
 
     .company-footer {
