Better display of the home page on IE11

--- a/frontend/src/components/home/home.scss
+++ b/frontend/src/components/home/home.scss
@@ -96,6 +96,7 @@
                 width: 90px;
 
                 &.fse { width: 120px; }
+                &.pole-emploi a { width: 90px; }
                 &.fse-text { width: auto !important; }
                 img { max-width: 100%; }
             }
