Add global polyfill for IE6 à 11

--- a/frontend/src/style/global.scss
+++ b/frontend/src/style/global.scss
@@ -480,6 +480,7 @@ header#global-header {
         }
         .title {
             padding: 20px;
+            height: 70px;
             display: flex;
             background: white;
 
