--- a/frontend/src/components/home/home.scss
+++ b/frontend/src/components/home/home.scss
@@ -41,6 +41,8 @@
     }
 
     .button-container {
+        position: relative;
+        z-index: 1;
         text-align: center;
         margin-top: 100px;
         letter-spacing: 1px;
@@ -81,7 +83,6 @@
             position: absolute;
             bottom: 0;
             right: 0;
-            left: 0;
             background-color: transparent;
             @media (max-width: $min-width-mobile) {
                 display: none;
