--- a/frontend/src/components/company_details/company_details.scss
+++ b/frontend/src/components/company_details/company_details.scss
@@ -26,7 +26,7 @@
         margin: 30px 0;
     }
 
-    .modal-title strong {
+    .title strong {
         color: $blue;
         font-size: 1.5em;
         margin: 0;
