--- a/frontend/src/style/mixins.scss
+++ b/frontend/src/style/mixins.scss
@@ -204,7 +204,7 @@
         max-height: 90vh;
     }
 
-    .modal-title {
+    .title {
         position: relative;
         min-height: 50px;
         padding: 20px 45px 45px 45px;
@@ -245,7 +245,7 @@
         }
     }
 
-    .modal-footer {
+    .company-footer {
         background: black;
         text-align: center;
         padding: 10px 0;
@@ -263,7 +263,7 @@
             top: 1vh;
             max-height: 98vh;
         }
-        .modal-title {
+        .title {
             padding: 20px 40px 20px 20px;
             h1, strong { font-size: 1.3em; }
         }
