--- a/frontend/src/components/companies/companies.scss
+++ b/frontend/src/components/companies/companies.scss
@@ -324,43 +324,8 @@
             }
         }
 
-        li {
-            display: block;
-            border-bottom: solid 1px $lightgray;
-            &:last-child { border-bottom: none; }
-
-            button {
-                color: $gray-font;
-                font-size: 1em;
-                display: flex;
-                min-height: 40px;
-                line-height: 40px;
-                width: 100%;
-                padding: 0 20px;
-
-                background: none;
-                border: none;
-                border-left: solid 5px transparent;
-
-                text-align: left;
-
-                > span:first-child {
-                    width: 90%;
-                    min-height: 40px;
-                    span {
-                        display: inline-block;
-                        line-height: 20px;
-                        vertical-align: middle;
-                    }
-                }
-                .icon { float: right; margin-top: 8px; }
-            }
-
-            &.selected {
-                button { border-left: solid 5px $pink; }
-            }
-
-        }
+        li { border-bottom: solid 1px $lightgray; }
+        @include mx-list-selected();
 
         .button-container {
             text-align: center;
