--- a/frontend/src/components/form/form.scss
+++ b/frontend/src/components/form/form.scss
@@ -11,15 +11,37 @@ $submit-width: 340px;
     }
 
 
+    #job-form-step {
+        @include mx-list-selected();
+        li {
+            background-color: white;
+            margin-bottom: 5px;
+        }
+
+        .return {
+            background: none;
+            color: white;
+            border: none;
+            margin-top: 40px;
+
+            &:hover {
+                text-decoration: underline;
+                cursor: pointer;
+            }
+        }
+
+        @media (max-width: $min-width-mobile) {
+            ul { padding: 0 10px; }
+            li .icon { margin-left: 5px; }
+        }
+    }
+
     #job-form-step, #location-form-step {
         margin: auto;
         max-width: 850px;
 
         // Avoid superposition with fixed footer
         margin-bottom: 135px;
-    }
-
-    #job-form-step, #location-form-step {
 
         text-align: center;
         color: white;
@@ -36,30 +58,6 @@ $submit-width: 340px;
             width: $input-width;
             max-width: 100%;
             text-align: center;
-        }
-
-        /* Selected options */
-        li.selected {
-            display: inline-block;
-            padding: 10px 40px 10px 20px;
-            margin-right: 15px;
-            margin-bottom: 15px;
-
-            max-width: 100%;
-            background: #066EE7;
-            color: white;
-            border-radius: 30px;
-
-            position: relative;
-
-            > span {
-                overflow: hidden;
-                display: inline-block;
-            }
-
-            > button:hover {
-                cursor: pointer;
-            }
         }
 
         /* Suggestions list */
