--- a/frontend/src/components/home/home.scss
+++ b/frontend/src/components/home/home.scss
@@ -140,6 +140,25 @@
             padding: 20px 10px;
         }
 
+        .youtube-video {
+            position: relative;
+            padding-bottom: 56.25%;
+            padding-top: 30px;
+            height: 0;
+            overflow: hidden;
+            margin-bottom: 30px;
+
+            iframe,
+            object,
+            embed {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
+        }
+
         .how-it-works {
             padding: 20px;
 
