--- a/frontend/src/style/constants.scss
+++ b/frontend/src/style/constants.scss
@@ -8,6 +8,7 @@ $min-width-desktop: 1200px;
 $pink: #F60CB9;
 $blue: #066EE7;
 $blue-hover: #0562CE;
+$fse-blue: #004fa2;
 $gray: #B7B5C6;
 $violet: #351D4E;
 $gray-font: #333;
