Make footer 100% of width

--- a/frontend/src/components/home/home.scss
+++ b/frontend/src/components/home/home.scss
@@ -84,6 +84,7 @@
             position: absolute;
             bottom: 0;
             right: 0;
+            left: 0;
             background-color: white;
             @media (max-width: $min-width-mobile) {
                 display: none;
