Change no result message and make it closeable

--- a/frontend/src/components/companies/companies.scss
+++ b/frontend/src/components/companies/companies.scss
@@ -50,6 +50,7 @@
 
         color: $pink;
         font-size: 2.5em;
+        line-height: 30px;
         background-color: white;
         padding: 35px 30px;
 
