--- a/frontend/src/components/companies/companies.scss
+++ b/frontend/src/components/companies/companies.scss
@@ -49,18 +49,19 @@
         z-index: 2;
 
         color: $pink;
-        font-size: 2.5em;
+        font-size: 1.5em;
         line-height: 30px;
         background-color: white;
         padding: 35px 30px;
+        font-family: "Signika", sans-serif;
 
         > div:first-child {
             line-height: 1.25em;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
+            margin-top: 10px;
         }
 
         @media (max-width: $min-width-mobile) {
-            font-size: 1.5em;
             padding: 20px 15px;
             left: 10%;
             width: 80%;
