Better responsive display for siret number

--- a/frontend/src/components/companies/companies.scss
+++ b/frontend/src/components/companies/companies.scss
@@ -410,9 +410,12 @@
     }
 
     small {
-        float: right;
+        text-align: right;
         font-size: .8em;
         color: gray;
+        margin-bottom: 5px;
+        display: block;
+        padding-right: 10px;
     }
 
     hr {
