--- a/frontend/src/style/mixins.scss
+++ b/frontend/src/style/mixins.scss
@@ -311,3 +311,31 @@
         }
     }
 }
+
+// Mixin when no job found
+@mixin no-job($font-weight: bold, $font-size: 1.25em) {
+
+    .no-job-popin {
+        background-color: white;
+        border-radius: 5px;
+        position: relative;
+        padding: 10px;
+        color: $pink;
+        font-size: $font-size;
+        text-align: left;
+
+        margin: auto;
+
+        width: 100%;
+        max-width: 400px;
+        font-weight: $font-weight;
+
+        .close-container {
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            border: none;
+            background: none;
+        }
+    }
+}
